[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/test_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/pieces/money.png" type="Texture" id=3]
[ext_resource path="res://game/Inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/pieces/player_template_background.png" type="Texture" id=5]
[ext_resource path="res://game/cards/LastCard.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Comfortaa-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="player" type="Node2D" groups=[
"server",
]]
script = ExtResource( 1 )

[node name="Colonists" type="Node2D" parent="."]

[node name="Houses" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="CanvasLayer/MainContainer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="CanvasLayer/MainContainer/Container"]
margin_left = 1320.0
margin_top = 752.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="CanvasLayer/MainContainer/Container" instance=ExtResource( 4 )]
margin_left = 1328.0
margin_top = 840.0
margin_right = 1368.0
margin_bottom = 880.0

[node name="MoneyContainer" type="Control" parent="CanvasLayer/MainContainer/Container"]
margin_left = 1336.0
margin_top = 768.0
margin_right = 1482.0
margin_bottom = 801.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainContainer/Container/MoneyContainer"]
anchor_top = -0.0286024
anchor_bottom = -0.0286024
margin_right = 32.0
margin_bottom = 31.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/Container/MoneyContainer"]
margin_left = 43.3701
margin_top = 3.77975
margin_right = 83.3701
margin_bottom = 26.7798
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastCard" parent="CanvasLayer/MainContainer/Container" instance=ExtResource( 6 )]
margin_left = 1800.0
margin_top = 872.0
margin_right = 1840.0
margin_bottom = 912.0

[node name="OpenClose" type="Button" parent="CanvasLayer/MainContainer"]
margin_left = 1600.0
margin_top = 704.0
margin_right = 1650.0
margin_bottom = 754.0
custom_fonts/font = ExtResource( 2 )
text = "V"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/MainContainer/OpenClose" to="." method="_on_OpenClose_pressed"]
